infra/k8s-dev/ingress-srv.yaml
# # apiVersion: networking.k8s.io/v1
# # kind: Ingress
# # metadata:
# #   name: ingress-service
# #   annotations:
# #     kubernetes.io/ingress.class: nginx
# #     nginx.ingress.kubernetes.io/use-regex: "true"
# # spec:
# #   rules:
# #   - host: ticketing.dev
# #     http:
# #       paths:
# #       - path: /api/users/?(.*)
# #         pathType: Prefix
# #         backend:
# #           service:
# #             name: auth-srv
# #             port:
# #               number: 3000
# #       - path: /?(.*)
# #         pathType: Prefix
# #         backend:
# #           serviceName: client-srv
# #           servicePort: 3000
# apiVersion: networking.k8s.io/v1
# kind: Ingress
# metadata:
#   name: ingress-service
#   annotations:
#     kubernetes.io/ingress.class: nginx
#     nginx.ingress.kubernetes.io/use-regex: "true"
# spec:
#   rules:
#   - host: ticketing-dev
#     http:
#       paths:
#       - path: /api/users/?(.*)
#         backend:
#             serviceName: auth-srv
#             servicePort: 3000
#       - path: /api/tickets/?(.*)
#         backend:
#           serviceName: tickets-srv
#           servicePort: 3000
#       - path: /?(.*)
#         backend:
#           serviceName: client-srv
#           servicePort: 3000
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-service
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  rules:
  - host: ticketing-dev
    http:
      paths:
      - path: /api/payments/?(.*)
        backend:
          serviceName: payments-srv
          servicePort: 3000
      - path: /api/users/?(.*)
        backend:
          serviceName: auth-srv
          servicePort: 3000
      - path: /api/tickets/?(.*)
        backend:
          serviceName: tickets-srv
          servicePort: 3000
      - path: /api/orders/?(.*)
        backend:
          serviceName: orders-srv
          servicePort: 3000
      - path: /?(.*)
        backend:
          serviceName: client-srv
          servicePort: 3000
